--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ body {
           justify-content: space-between;
   width: 110rem;
   height: 120rem;
+  margin: 0 auto;
   padding: 2.4rem 7rem 2.5rem 7rem;
 }
 
@@ -132,6 +133,10 @@ body {
 
 .content .content-left__list li:first-child a {
   font-weight: 700;
+}
+
+.content .content-left__img img {
+  height: 100%;
 }
 
 .content .content-center {
