--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,6 +18,7 @@ body
   justify-content: space-between;
   width: 110rem
   height: 120rem
+  margin: 0 auto
   padding: 2.4rem 7rem 2.5rem 7rem
 
 .head
@@ -69,6 +70,9 @@ body
       li:first-child
         a
           font-weight: 700
+    &__img
+      img
+        height: 100%
   .content-center
     display: flex
     flex-direction: column
