--- a/sass/main.sass
+++ b/sass/main.sass
@@ -72,10 +72,12 @@ body
           font-weight: 700
     &__img
       img
-        height: 100%
+        width: 100%
+        vertical-align: bottom
   .content-center
     display: flex
     flex-direction: column
+    margin-left: auto
     justify-content: space-between
     &__top
       width: 75.7rem
@@ -91,9 +93,11 @@ body
       flex-wrap: wrap
       justify-content: space-between
       width: 75.7rem
+      padding-top: 2.5rem
     &__bottom
       display: flex
       justify-content: space-between
+      padding-top: 2rem
       div
         height: 20rem
         padding: 0.5rem 2rem
